SOLR-14680: Compile error in 8.0